[tool.poetry]
name = "publisher"
version = "0.1.0"
description = "A command-line tool for publishing articles to tech blogging platforms."
authors = ["Luc Shelton <lucshelton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Markdown = "^3.3.7"
requests = "^2.27.1"
rich-click = "^1.3.1"
autopep8 = "^1.6.0"
pydantic = "^1.9.0"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
publisher = 'publisher.__main__:cli'